fixed button offset on tablet view

--- a/css/style-1000px.css
+++ b/css/style-1000px.css
@@ -88,3 +88,6 @@
 			height: 19.5em;
 			margin: 0;
 		}
+form .button {
+    margin: 0px;
+}
